# RabAiMind

./: .env.example  .gitignore  DEVELOPMENT_LOG.md  Dockerfile  Paperclip-OpenClaw-配置总结.md  README.md  VERIFICATION_REPORT.md  api.py  config.yaml  docker-compose.yaml  mcp.json  mcp_server.py  mcp_server_optimized.py  pyproject.toml  pytest.ini  rabai_mind_agent.py  requirements.txt  start_rabai_team_pro.sh  task_snapshot.md  test_ai_analyzer.py  test_api.py  test_end_to_end.py  test_smart_text.py  volc_okppt_tools.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
.history_cache/: 03f29400-b9fa-4585-98f6-68eafac4dd07.json  120ea6ef-afc2-400d-bb69-42992751db67.json  3839d3eb-517d-4a8f-8542-66e1388c11f2.json  77488c39-5b8c-46ca-8b3a-4d97e023a943.json  8851fb4d-178f-4882-b138-ae7abe965c01.json  8c1d4ec6-4196-42bb-b44d-c068ff948148.json  9fe852dd-b989-4cc1-a4b4-253f4ece27e4.json  c71af2ec-ee25-4778-a102-39831bfb038f.json  ca170509-174c-4268-aa74-eceb872e8e63.json
agents/: __init__.py  api_interface_agent.py  coordinator_agent.py  deploy_agent.py  image_svg_builder.py  mcp_service_agent.py  okppt_agent.py  pptx_optimizer_agent.py  quality_agent.py  svg_agent.py  volc_okppt_tools.py  volcano_agent.py
agents/_archive/: api_interface_agent.py  coordinator_agent.py  volcano_agent.py
backend/: .env.example  requirements.txt
backend/app/: database.py  main.py
browser-extension/: manifest.json
browser-extension/src/: background.js  content.js  options.html  popup.html  popup.js
data/: audit.json  cohort_users.json  quotas.json  scheduled_emails.json  schedules.json  search_analytics.json  user_templates.json
docs/: AI_PPT_Prompts.md  RabAi_Mind_PRD.md  api_specification.md  cache_strategy.md  code_optimization_suggestions.md  code_review_report.md  code_standards.md  deployment_manual.md  integration_plan.md  mcp_integration_manual.md  requirements_checklist.md  svg_design_master_guide.md  technical_architecture.md  ui_visual_design.md
embed-sdk/: README.md  rabaimind-embed.js
rabai-web/: USABILITY_REPORT.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
rabai-web/public/: manifest.json  robots.txt  sitemap.xml  sw.js
rabai-web/src/: App.vue  main.ts  (+1 more)
rabai-web/src-tauri/: Cargo.toml  tauri.conf.json
rabai-web/src-tauri/capabilities/: default.json
rabai-web/src-tauri/src/: lib.rs  main.rs
rabai_mind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: deploy.sh
src/: config.py  constants.py  main.py
temp/: r57-plan.md
tests/: bug_list.md  conftest.py  test_agents.py  test_api.py  test_cases.md  test_core.py  test_ppt_generator.py  test_ppt_service.py  test_report_template.md  test_security.py  test_task_modules.py
web/: index.html  package-lock.json  package.json
(+647 files in other folders)
